同步于: 11月30日21时52分

--- a/pages/nf4514/n12585111.md
+++ b/pages/nf4514/n12585111.md
@@ -5,7 +5,7 @@
 
 
 
-<div><img alt="【大选更新11·30】逾3亿黑钱助拜登选举" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/471405-600x400.jpg"/>
+<div><img alt="【大选更新11·30】逾3亿黑钱助民主党选举" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/471405-600x400.jpg"/>
 <div class="caption">
  图为2020年大选民主党总统候选人拜登。(CHANDAN KHANNA/AFP via Getty Images)
 </div></div><hr/>
