--- a/pages/p5/954247.md
+++ b/pages/p5/954247.md
@@ -1,4 +1,4 @@
-### 美学者倡议建“数位贸易区”对抗中俄(图)
+### 川普即将制裁中芯国际 中国芯片生死之变(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,10 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align:center">
-  <img src="https://img3.secretchina.com/pic/2020/10-6/p2790001a641176913-ss.jpg"/>
+ <p style="text-align: center;">
+  <img alt="川普 制裁 中芯国际 芯片" src="https://img3.secretchina.com/pic/2020/9-13/p2775151a464166957-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   美学者柯纳克倡议民主国家建“数位贸易区”共享关税规则对抗中俄。（图片来源：上报）
+   川普政府即将制裁中国最大的芯片制造企业中芯国际。（图片来源：Adobe stock）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,70 +21,73 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年10月6日讯】美国智库外交关系协会（Council on Foreign Relations）9月发表了一篇《将
+  【看中国2020年11月30日讯】（看中国记者李正鑫综合报导）
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/数位贸易" target="_blank">
-    数位贸易
-   </span>
+   川普
   </strong>
-  武器化》（Weaponizing Digital Trade）的特别报告，作者柯纳克（Robert Knake）认为，美国应建立一个由
+  政府瞄准了中国科技行业，即将
   <strong>
-   民主
+   制裁
   </strong>
-  国家组成的数位贸易
+  中国最大的
   <strong>
-   净网
+   芯片
   </strong>
-  ，并利用其广大的市场力量促进线上自由和网络安全，以抗衡中国在数位领域中与日俱增的影响力。
+  制造企业
+  <strong>
+   中芯国际
+  </strong>
+  （SMIC）和大型国有石油公司中海油（CNOOC）等公司。被外界称为
+  <span href="https://www.secretchina.com/news/gb/tag/习近平" target="_blank">
+   习近平
+  </span>
+  “经济国师”之一的清华大学国家金融研究院院长朱民认为，科技之变就是生死之变。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  <strong>
-   建立数位贸易区以捍卫
-   <span href="https://www.secretchina.com/news/gb/tag/民主" target="_blank">
-    民主
-   </span>
-  </strong>
+  《路透社》11月29日援引相关文件和消息来源报道，
+  <span href="https://zh.wikipedia.org/wiki/%E5%94%90%E7%B4%8D%C2%B7%E5%B7%9D%E6%99%AE" target="_blank">
+   川普
+  </span>
+  政府将遏制这两家被认为由中国军方拥有或控制的公司在美国市场融资，美中紧张局势将再度升级。
  </p>
  <p>
-  柯纳克在《将数位贸易武器化》中指出，通过建立一个数位贸易区，美国和其他民主盟友将得以捍卫线上民主的规范，同时避免由国家所赞助的商业间谍活动与其他困扰着当今网络社会的恶意攻击。
+  《路透社》在11月初报道，美国国防部计划将认定四家
+  <span href="https://www.secretchina.com" target="_blank">
+   中国
+  </span>
+  公司为中国军方拥有或控制的公司。在这之前，已经有31家中国公司被认为具有中国军方背景。
  </p>
  <p>
-  不过，他也指出，民主数位贸易区的建立，将在一定程度上与中国所倡导的国家控制型网络系统形成鲜明对比。
+  <span href="https://www.secretchina.com/news/gb/tag/川普" target="_blank">
+   川普
+  </span>
+  (特朗普)近期发布了一项行政命令，将阻止美国投资者从明年起购买黑名单上的公司股票。
  </p>
  <p>
-  柯纳克警告：“中国与俄罗斯等其他专制政权正努力限制着国家边境讯息的肆意出入，他们通过监视手段，不断审查着当今网际网络中的使用者。”他指出，如今有越来越多国家被纳入国家控制型的网络系统之中，而这种模式限制了隐私权，同时为国家监视提供很大程度的支撑。
+  《路透社》11月29日援引相关文件和三个消息来源透露的信息显示，这个名单出包括
+  <span href="https://zh.wikipedia.org/zh-cn/%E4%B8%AD%E8%8A%AF%E5%9B%BD%E9%99%85" target="_blank">
+   中芯国际
+  </span>
+  和中海油外，还将包括中国建筑技术有限公司和中国国际工程咨询公司。
  </p>
  <p>
-  因此，通过这一民主国家间共同建立的数位贸易区，美国及其盟友得以为专制的网络使用模式创造一个引人注目的替代方案。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  <strong>
-   柯纳克给予政府的建议
-  </strong>
+  对此
+  <span href="https://www.secretchina.com/news/gb/tag/中芯国际" target="_blank">
+   中芯国际
+  </span>
+  表示，将继续“与美国政府进行有建设性和公开的接触”，并强调其产品和服务仅用于民用和商业用途，“公司和中国军方没有关系，也不会为任何军事最终用户和最终用途制造产品”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -99,7 +102,7 @@
   </div>
  </center>
  <p>
-  作者柯纳克为美国政府创建数位贸易区提出了以下的建议：
+  中芯国际对美国的技术依赖严重，并且已经成为川普政府的一个目标。今年9月，美国商务部在断定向该公司提供设备将存在用于军事目的的“不可接受的风险”后，通知一些美国公司，在为中芯国际提供产品和服务前，它们需要获得许可证。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -114,7 +117,7 @@
   </div>
  </center>
  <p>
-  第一，建立条约组织以协调网络安全与执法工作，并发挥其职能，寻求他国的加入。
+  美国国防部依据《国防授权法》需要制订一份由中国军方拥有和控制的“共产主义中国军事公司”名单，今年首次发布这样的名单，其中包括海康威视、中国电信和中国移动等中国大企业。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -129,7 +132,7 @@
   </div>
  </center>
  <p>
-  第二，创建共享关税与制裁政策，共同打击网络犯罪或是参与非法行为的非成员国。
+  同时，美国国会和行政当局也越来越多地试图遏制不遵守规则的中国公司进入美国市场。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -144,7 +147,7 @@
   </div>
  </center>
  <p>
-  第三，按时缴纳年度款项，为集体创造持续性资金。
+  美国国防承包商SOS International LLC公布的一份报告指出，中芯国际的技术有助于中国军方，报告随后在参与此次评估的美国官员中广泛地传阅。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -159,7 +162,60 @@
   </div>
  </center>
  <p>
-  第四，让非政府利益相关者参与其中，以实现数位贸易区的完善。
+  报告指出，中芯国际已经与中国大陆一间大型国防集团合作，与军方有联系的多所大学的研究人员在进行设计时，会匹配中芯国际的技术，其中包括一家军事院校，美国商务部在2015年已将列入出口黑名单，因为该院校涉嫌设计用于模拟核试验的超级计算机的
+  <span href="https://zh.wikipedia.org/zh-cn/%E8%8A%AF%E7%89%87" target="_blank">
+   芯片
+  </span>
+  。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  这份报告提到：“一系列军校和国防综合企业的研究人员，使用中芯国际的工艺和
+  <span href="https://www.secretchina.com/news/gb/tag/芯片" target="_blank">
+   芯片
+  </span>
+  进行研究，这代表研究是根据中芯国际生产规格进行，从而不可能在其它代工厂生产他们的芯片。”
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  该报告引用了所称军校研究人员发表的论文，使用了中芯国际的芯片技术的参考数据。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  SOS International的这份报告，已经分享给川普政府数个机构的官员，其中包括美国商务部工业安全局（Bureau of Industry and Security,简称BIS）。BIS负责监督对美国敏感技术出口的限制。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -178,7 +234,11 @@
   </ins>
  </center>
  <p>
-  第五，清理公开网站，以拆除网络犯罪者所使用的基础设施。
+  中芯国际是中国最大的芯片制造商，也是
+  <span href="https://www.secretchina.com/news/gb/tag/华为" target="_blank">
+   华为
+  </span>
+  芯片的供应商之一，在《中国制造2025》计划里，是北京当局重点扶持芯片行业所谓的“国家队”代表之一。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -193,7 +253,7 @@
   </div>
  </center>
  <p>
-  第六，应列举出困难的议题，以防止该贸易区的形成停滞。
+  被外界称为习近平“经济国师”之一的清华大学国家金融研究院院长朱民9月5日在由《财经》、《财经智库》、北京资产管理协会主办的“2020全球财富管理论坛”上演讲称，经济严重衰退，金融市场巨大波动，国际政治生态恶化，但是所有的东西拢在一起，受冲击最大的是科技。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -208,9 +268,7 @@
   </div>
  </center>
  <p>
-  <strong>
-   中美市场即将脱钩
-  </strong>
+  朱民直言：“所有的人、所有的企业、所有的国家别无选择，只有跟着科技和数字化，这是生死之变，或者你跟上这个潮流，或者你被淘汰。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -225,7 +283,7 @@
   </div>
  </center>
  <p>
-  柯纳克认为，该项计划具有一定的急迫性，因为其“窗口期短”，因此说服欧盟加入该计划成为主要关键。他表示：“通过与数位贸易区使用权的绑定，能使参与者遵守网络安全、隐私权与执法合作的义务。而美国及其盟友就能迫使他国在中国的网络系统与美国的数位贸易区之间做出抉择。”
+  朱民坦承：“还是要看到我们的不足。我们在基础、核心、‘卡脖子’技术上还是有很多不足的。举一些国内大家都知道的例子。光伏面板，中国在全世界有50%的市场份额，我们做了调查，15%的技术在国外......半导体技术90%在国外。所以，我们还是得看到我们基础的薄弱。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -240,7 +298,7 @@
   </div>
  </center>
  <p>
-  最后，柯纳克总结道，该项数位贸易区计划一旦成立，美国企业在中国市场的损失会大幅减少，相反地，中国企业在美国市场则会付出代价。这意味着中美在某种程度上将要开始脱钩，并且形成更加对立的局面。“美国要让中国了解到，他们必须做出改变。”
+  8月24日，朱民出席了习近平以个人名义召开的经济学者座谈会，与会的9名经济学者首次被媒体曝光，外界称他们为习近平的“经济国师”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -272,7 +330,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -304,13 +362,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/948313.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/948313.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/948313.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/06/948313.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/954247.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/954247.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/954247.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/30/954247.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p5/948313.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p5/954247.md' width='0px' height='0px'/>
