--- a/pages/nf4514/n12585111.md
+++ b/pages/nf4514/n12585111.md
@@ -1,13 +1,13 @@
-### 【大选更新11·30】逾3亿黑钱助拜登选举
+### 【大选更新11·30】逾3亿黑钱助民主党选举
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
 
 
 
-<div><img alt="【大选更新11·30】逾3亿黑钱助民主党选举" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/471405-600x400.jpg"/>
+<div><img alt="【大选更新11·30】川普：我不为自己而战" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/50493471553_8f383dbf76_o-600x400.jpg"/>
 <div class="caption">
- 图为2020年大选民主党总统候选人拜登。(CHANDAN KHANNA/AFP via Getty Images)
+ 周一早上，川普总统发推文说，他不是为了自己而战，而是为了那些支持他的美国选民而战。图为川普总统。（Shealah Craighead/White House）
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
@@ -73,7 +73,7 @@
  ：
 </h4>
 <h3>
- 分析：有逾3亿美元“黑钱”帮助拜登竞选
+ 分析：有逾3亿美元“黑钱”帮助民主党竞选
 </h3>
 <figure class="wp-caption aligncenter" id="attachment_7169092" style="width: 594px">
  <ok href="https://i.epochtimes.com/assets/uploads/2004/09/409212225868.jpg">
