--- a/pages/p3/954246.md
+++ b/pages/p3/954246.md
@@ -1,4 +1,4 @@
-### 见证中共邪恶政权各种谎言 宋庆龄悔不当初(图)
+### 美国那根神秘巨柱 突然不翼而飞了(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,10 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align:center">
-  <img alt="宋庆龄与毛泽东和邓小平在苏联莫斯科。" src="https://img3.secretchina.com/pic/2020/11-18/p2820632a427062478-ss.jpg"/>
+ <p style="text-align: center;">
+  <img alt="美国突然出现的神秘金属柱子突然又神秘失踪了" src="https://img3.secretchina.com/pic/2020/11-25/p2825781a936304469-ss.jpg" style="height:423px; width:600px"/>
   <br>
-   见证中共独裁政权各种谎言，宋庆龄悔不当初。图为宋庆龄与毛泽东和邓小平在苏联莫斯科。（图片来源：公有领域）
+   美国犹他州突然出现的神秘金属柱子突然又神秘失踪了。（示意图/非本文图片/图片来源：Pixabay)
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -29,61 +29,49 @@
   </div>
  </div>
  <p>
-  1949年，
-  <span href="https://www.secretchina.com/news/gb/tag/蒋介石" target="_blank">
-   蒋介石
-  </span>
-  和宋家姐妹轮番劝
+  【看中国2020年11月30日讯】前不久在
   <strong>
-   宋庆龄
+   <span href="https://www.secretchina.com/news/gb/tag/美国" target="_blank">
+    美国
+   </span>
+   犹他州
   </strong>
-  离开大陆，宋拒绝了，留下了与推翻丈夫政权的人合作，匪夷所思，除了开始那几年的尊重，宋更多的是被冷落，被当做政治花瓶点缀，宋见证了这个独裁政权的各种谎言与荒诞，心中的苦闷是不能言说的。1994年11月，
+  偏僻的沙漠地区突然神秘出现了一根巨大
   <strong>
-   中共
+   金属柱子
   </strong>
-  书记处审查通过了党史编委会整理的关于宋庆龄1949年后32年经历的材料。
+  ，引起美国国内乃至国际社会的关注。有民众成功找到这根神秘的柱子，与之合影，并曝光了它的所在位置。但没想到几天之后，这根突然出现的神秘柱子，又突然不翼而飞了。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  这份材料的内容提要如下：
- </p>
- <p>
-  1955年11月，宋给毛写信：“我很不理解提出对工商业的改造，
-  <span href="https://www.secretchina.com/news/gb/tag/共产党" target="_blank">
-   共产党
+  前几天，多家媒体都报导了
+  <span href="https://www.secretchina.com/news/gb/tag/犹他州" target="_blank">
+   犹他州
   </span>
-  曾向工商界许下长期共存、保护工商业者利益的诺言。这样一来，不是变成自食其言了吗？资本家已经对共产党的政策产生了怀疑和恐惧，不少人后悔和抱怨。”毛批示：“宋副委员长有意见，要代表资本家讲话。”
+  沙漠地区突然出现的神秘金属柱子的消息。
  </p>
  <p>
-  1957年宋又
-  <span href="https://www.secretchina.com/news/gb/tag/写信" target="_blank">
-   写信
+  11月18日，犹他州公共安全部（Utah Department of Public Safety）与野生动物资源部门的官员搭乘直升机，在该州南部一处沙漠中清点大角羊的数量，意外看到这根
+  <span href="https://www.secretchina.com/news/gb/tag/金属柱子" target="_blank">
+   金属柱子
   </span>
-  给党中央：“党中央号召大鸣大放，怎么又收了？共产党不怕国民党八百万大军，不怕美帝国主义，怎么会担心人民推翻党的领导和人民政府？共产党要敢于接受各界人士的批评，批评人士大多是爱国、爱党的，一些民主党派人士为新中国的解放，作出了家庭、个人名利的牺牲，一些二、三十岁的青年知识分 子怎么可能一天就变成反党反社会主义分子？我很不理解这个运动，我想了两个多月，还是想不通，有这么多党内党外纯粹的人会站在共产党和人民政府的对立面？要推翻共产党？”
+  。
  </p>
  <p>
-  从1958年起，宋曾推病拒绝参加人大常委会。党中央委派刘少奇、周恩来、董必武去做工作，宋只得继续参加。1959年4月，宋在人大被推举为国家副主席。宋先后两次推辞：“我是落伍了，思想跟不上，才挂个名，作个样子，对国家不利。”提议由李富春或乌兰夫担任。
+  飞行员表示“它看起来不像被随机放在那里的，反而像是被‘种’在那儿”。消息传出后引发热议，有网民甚至说：“千万不要碰它，说不定一碰就像电影中的情节一样，发射出奇怪的讯号让人类自相残杀。”（详情请看：
+  <span href="https://www.secretchina.com/news/gb/2020/11/25/953746.html">
+   美沙漠惊见不明巨碑 网吓傻：别碰它
+  </span>
+  ）
  </p>
  <p>
-  宋任国家副主席，是刘少奇、董必武、林伯渠、李富春提议的，政治局讨论时，21人中18人赞成，3人反对，反对者是：毛、林彪、康生。当时毛发言：“宋是我们民主革命时期的同路人，在社会主义革命时期，她和我们就走不到一起了。从不赞成我们的方针路线到反对我们的方针路线。我们同她是不同的阶级。”
+  经初步调查发现，这根柱子呈三角柱状，约有10至12英尺（3至3.7公尺）高，差不多是两个人的身高加总，但不知谁或为何将这根柱子插入红色的岩石中。
  </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
  <p>
-  文革期间，宋先后给毛和党中央写了七封信，表达了她对“文革”的不理解、反感，并对共产党极度失望。1967年8月、1969年11月、1976年6月，宋曾三次产生厌世思想，在信中以及对来探望她的领导人的谈话中流露出对自己所选择的道路感到怅惘和说不出的苦闷。
+  尽管犹他州公共安全部未透露这根柱子的确切位置，但已有几个民众在摩押市（Moab）的南部找到了它，其中包括一个名叫萨柏（David Surber）的男子。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -98,7 +86,7 @@
   </div>
  </center>
  <p>
-  七封信中说：“我不懂文化，说小说都是政治，而且都是毒草，我糊涂了，一夜天下来，一些和我一起工作的同事都变成了走资派、反党集团、野心家、牛鬼蛇神。中央要我学习批判揭发刘少奇，我不会作的，刘少奇主席在党中央工作了三、四十年，今天会是叛徒、内奸！我不相信，一个叛徒内奸当了七年的国家主席，现在宪法还有效吗？怎么可以乱抓人、乱斗人、逼死人？党中央要出来讲话。这种无法无天的情况，自己伤害自己的同志、人民，是罪行。我们的优秀干部从与国民党的战斗中走过来，却死在自己的队伍中，这是什么原因？”
+  萨柏在Instagram网站上分享了他在现场进行调查的短片。据他表示，这根柱子的材质是铝，不具磁性，它由三片固定成三角柱的形状。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -113,7 +101,7 @@
   </div>
  </center>
  <p>
-  1970年3月，毛对周恩来说：“她不愿意看到今天的变化，可以到海峡对岸，可以去香港、去外国，我不挽留。”并指示周恩来、李先念把他的话传达给宋。传达时他们说：“主席很关心你，知道你的心情不怎么好，建议你到外面散散心，休息休息。”宋说：“是否嫌我还在？我的一生还是要在这块土地上，走完最后几步。”于是宋推病拒绝出席一些节日活动和招待会，说：“我参加会伤感，还是不参加，参加一次，回来就要进医院。另外，我也不想做政治上的点缀。”
+  然而，犹他州土地管理局（Bureau of Land Management）在11月28日指出，这根柱子已经被不明人士在11月27日晚间从其管辖的公共土地上移除。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -128,7 +116,51 @@
   </div>
  </center>
  <p>
-  1980年11月，宋给党中央写了她一生中最后的一封信：“一、国家要振兴，恢复元气，这是一次大好时机。二、要总结建国以来政治运动对国家对人民造成的创伤。三、请不要把我和国父放在一起，我不够格的。”
+  土地管理局在脸书上发表声明说，该局接获可靠的报告称，这个非法设置的结构物已被不明人士移除。他们并未移除这个被视为私人财产的东西。他们也不会对涉及私人财产的犯罪进行调查，因为这属于当地警长办公室的权责。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  公共安全部也证实了这项消息：“它已经消失，几乎与当初出现的速度一样快。”该部还开玩笑地说，可能是外星人把它收回去了。该部此前在一份声明中说：“在未经许可的情况下，在联邦管辖的公共土地设置结构物或艺术品是违法的，无论你来自哪个行星。”
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  也有网民猜测，其实从一开始这个所谓的神秘金属巨柱，就是有人恶搞故意放上去的，现在闹大了，只好偷偷收了回去。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p style="text-align:center">
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -192,13 +224,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/904686.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/904686.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/904686.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/26/904686.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/954246.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/954246.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/954246.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/30/954246.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p6/904686.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p3/954246.md' width='0px' height='0px'/>
