同步于: 12月1日12时52分

--- a/pages/p9/954314.md
+++ b/pages/p9/954314.md
@@ -1,4 +1,4 @@
-### 路透挖出华为伊朗交易内幕 孟晚舟悬了(图)
+### 铤而走险？传金正恩家族等已接种中国疫苗(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,10 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align: center;">
-  <img alt="2019年9月23日，孟晚舟离开BC省最高法院。" src="https://img3.secretchina.com/pic/2020/5-26/p2697862a794240383-ss.jpg" style="height:337px; width:600px"/>
+ <p style="text-align:center">
+  <img alt="朝鲜领导人金正恩与中国国家主席习近平" src="https://img2.secretchina.com/pic/2019/2-12/p2360891a646334613-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   2019年9月23日，孟晚舟离开BC省最高法院。（图片来源：Karen Ducey/Getty Images）
+   朝鲜领导人金正恩与中国国家主席习近平。(图片来源: Getty Images)
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,64 +21,69 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年9月17日讯】（法广RFI）
+  【看中国2020年12月1日讯】目前中国研制的
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/华为" target="_blank">
-    华为
+   <span href="https://www.secretchina.com/news/gb/tag/武汉肺炎" target="_blank">
+    武汉肺炎
    </span>
+   疫苗
   </strong>
-  违反美国制裁伊朗案件又有新发展，美国当局曾称，华为曾在2007年至2014年间，透过香港注册的星通技术公司（Skycom Tech Co Ltd）把美国电脑设备卖给
+  ，仍还处第三阶段测试，但却以“紧急使用”为由，迳行替百万人接种；现在更有多家外媒报导称，据华盛顿的韩国问题专家及日本2位匿名情报消息人士的话透露，
   <strong>
-   伊朗
+   朝鲜
   </strong>
-  ，但华为表示已在2007年出售了星通技术，而《路透社》调查发现，据星通技术在巴西提交的公司记录，显示华为在2007年出售星通技术的股份以来，仍在巴西和星通技术紧密往来了5年。有分析猜测此新证据或对
+  领导人
   <strong>
-   孟晚舟
+   金正恩
   </strong>
-  引渡案申诉不利。
+  和多名家族成员、政府高官们，因为出于对武汉肺炎病毒的忌惮，已经在于过去2周内接受了北京政府所提供的疫苗进行注射。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  据自由时报今天报道称，华为违反伊朗制裁案新进展！路透曝和关键公司往来证据。《路透》调查发现，
-  <span href="https://zh.wikipedia.org/zh-hans/%E5%8D%8E%E4%B8%BA" target="_blank">
-   华为
+  根据美国国家利益智囊中心资深主任卡齐安斯（Harry Kazianis），他从匿名的日本情报人士方面获知，在过去2周或3周以内，金正恩家族及朝鲜政府领导阶层等，都已经注射了北京政府所提供的
+  <span href="https://zh.wikipedia.org/wiki/2019%E5%86%A0%E7%8A%B6%E7%97%85%E6%AF%92%E7%97%85">
+   武汉肺炎
   </span>
-  违反美国对伊朗制裁案中的关键公司“星通技术”，和华为公司在2007年后仍继续往来。
+  疫苗。但日方情报人员则拒绝进一步透露他们所注射的是哪一款的疫苗。
  </p>
  <p>
-  自由时报说，《路透》今（16）报道，该报调查发现，华为违反美国对伊朗制裁案中的关键公司“星通技术”，和华为公司在2007年后仍继续往来。据星通技术在巴西圣保罗州提交的公司记录，其显示自2007年华为出售其在星通技术的股份以来，星通技术和华为仍在巴西紧密往来了5年。星通技术在巴西和香港提交的公司记录也显示，华为的两名主管胡厚昆和郭平，也与星通技术保持密切联系，直到2007年底。除了
-  <span href="https://www.secretchina.com/news/gb/tag/孟晚舟" target="_blank">
-   孟晚舟
+  从
+  <span href="https://www.secretchina.com/news/gb/tag/金正恩" target="_blank">
+   金正恩
   </span>
-  在2008年2月至2009年4月曾任星通董事外，胡厚昆和郭平也经营1家拥有星通技术的公司“Hua Ying”。据消息，胡厚昆和郭平目前都是华为的副董事长，并轮流担任公司董事长。现担任华为轮值董事长一职者为郭平。
+  上任9年以来，他的健康问题一直都是外界关注的焦点，36岁的他不仅烟瘾重，而且还过度肥胖的明显问题，更于今年年中短暂的神隐，期间他的亲妹妹金与正颇有接掌朝鲜政权的态势，而且还开启“自走炮”模式，对外界进行批评。在开城工业区内，原先象征韩朝友好合作的两韩联络办公室，就是她下令炸毁的，当时还引发外界对于金正恩是否突发重病或猝逝了，而有政权换新的各种揣测。
  </p>
  <p>
-  据该报道，星通技术的公司纪录还显示，华为对星通技术的控制权不仅扩展到了
-  <span href="https://www.secretchina.com/news/gb/tag/伊朗" target="_blank">
-   伊朗
+  武汉肺炎疫情爆发迄今，
+  <span href="https://www.secretchina.com/news/gb/tag/朝鲜" target="_blank">
+   朝鲜
   </span>
-  ，还扩展到了巴西，其控制权并延续到华为被控违反伊朗制裁的时期，但华为却声称，已在2007年出售星通100％的股权。
+  仅有数千名“疑似病例”，并对外宣称无任何确诊病例，外界则非常存疑。不过，官方更强硬超前部署，其中包括了关闭朝中边境和各项入境限制，似乎显现出当局对于疫情极度忧虑，因害怕可能会重创朝鲜。
  </p>
  <p>
-  美国检方在今年2月，以共谋诈欺勒索、窃取商业机密等16项罪名起诉
+  目前有关金正恩等人接受中国
+  <span href="https://www.secretchina.com/news/gb/tag/疫苗" target="_blank">
+   疫苗
+  </span>
+  一事，尚未得到任何证实，仍还有待朝鲜和中国官方的反应。
+ </p>
+ <p>
+  日前CNN曾报导，
   <span href="https://www.secretchina.com" target="_blank">
    中国
   </span>
-  华为及其子公司，指其涉嫌窃盗智慧财产（IP）长达数10年，并向受制裁的禁运国家伊朗销售监控设备等，据《路透》指出，新发现证实华为对星通技术的控制，比美国检方宣称的还强。
- </p>
- <p>
-  据该报道称，对于此报道，华为尚未发表回应。
+  国药集团疫苗仍还处于第三阶段测试，但却以“紧急使用”的名义下，为第一线人员、中国军对与留学生等近百万人接种。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -93,7 +98,7 @@
   </div>
  </center>
  <p>
-  原标题：传路透提新证据指华为与伊朗交易 对孟晚舟案或不利
+  路透也曾报导指出，朝鲜骇客冒充了招聘人员，而与欧美药厂员工接触，在这过程中还发送一至多份暗藏有恶意程式码的职务说明文件，企图窃取疫苗相关资讯。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -125,7 +130,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -157,13 +162,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p9/946436.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p9/946436.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p9/946436.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/09/17/946436.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p9/954314.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p9/954314.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p9/954314.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/01/954314.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p9/946436.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p9/954314.md' width='0px' height='0px'/>
