同步于: 12月1日18时2分

--- a/pages/p1/954321.md
+++ b/pages/p1/954321.md
@@ -1,4 +1,4 @@
-### 见证中共邪恶政权各种谎言 宋庆龄悔不当初(图)
+### 中国维权人士申请游行 公安威胁维稳(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align:center">
-  <img alt="宋庆龄与毛泽东和邓小平在苏联莫斯科。" src="https://img3.secretchina.com/pic/2020/11-18/p2820632a427062478-ss.jpg"/>
+  <img alt="4名维权人士提出在“法制日”和“世界人权日”游行（图片来源：大纪元）" src="https://img3.secretchina.com/pic/2020/12-1/p2829811a674983614-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   见证中共独裁政权各种谎言，宋庆龄悔不当初。图为宋庆龄与毛泽东和邓小平在苏联莫斯科。（图片来源：公有领域）
+   4名维权人士提出在“法制日”和“世界人权日”游行（图片来源：大纪元）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -29,61 +29,61 @@
   </div>
  </div>
  <p>
-  1949年，
-  <span href="https://www.secretchina.com/news/gb/tag/蒋介石" target="_blank">
-   蒋介石
-  </span>
-  和宋家姐妹轮番劝
+  【看中国2020年12月1日讯】（看中国记者文俪综合报导）日前，
   <strong>
-   宋庆龄
+   赵春红
   </strong>
-  离开大陆，宋拒绝了，留下了与推翻丈夫政权的人合作，匪夷所思，除了开始那几年的尊重，宋更多的是被冷落，被当做政治花瓶点缀，宋见证了这个独裁政权的各种谎言与荒诞，心中的苦闷是不能言说的。1994年11月，
+  、伍立娟、马波、姜家文4名
   <strong>
-   中共
+   <span href="https://www.secretchina.com/news/gb/tag/维权" target="_blank">
+    维权
+   </span>
   </strong>
-  书记处审查通过了党史编委会整理的关于宋庆龄1949年后32年经历的材料。
+  人士提出申请，要求在12月4日中国“全国
+  <strong>
+   法制日
+  </strong>
+  ”和12月10日“
+  <strong>
+   世界人权日
+  </strong>
+  ”举行
+  <strong>
+   游行
+  </strong>
+  。申请还因应疫情将人数控制在300人以内。该申请于11月24日交于北京公安后，并未得到明确答复。但游行发起人却一个个相继接到公安电话约谈，甚至被带到派出所。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  这份材料的内容提要如下：
- </p>
- <p>
-  1955年11月，宋给毛写信：“我很不理解提出对工商业的改造，
-  <span href="https://www.secretchina.com/news/gb/tag/共产党" target="_blank">
-   共产党
+  据维权网报导，赵春红、伍立娟、马波、姜家文4名维权人士于11月24日向北京公安提出在12月4日“
+  <span href="https://www.secretchina.com/news/gb/tag/法制日" target="_blank">
+   法制日
   </span>
-  曾向工商界许下长期共存、保护工商业者利益的诺言。这样一来，不是变成自食其言了吗？资本家已经对共产党的政策产生了怀疑和恐惧，不少人后悔和抱怨。”毛批示：“宋副委员长有意见，要代表资本家讲话。”
+  ”和12月10日“世界人权日”举行游行的申请。因考虑到疫情及交通等因素，游行人数控制在300人以内。游行中自觉维护秩序、和平示威；游行队伍有组织，有纪律的编组列队进行。遵守交通规则，维护交通秩序，避开堵车时间。游行路线为西单商场至月坛南街至月坛南桥，最后到北京月坛体育馆结束，时间为上午9点至11点。
  </p>
  <p>
-  1957年宋又
-  <span href="https://www.secretchina.com/news/gb/tag/写信" target="_blank">
-   写信
+  <span href="https://www.secretchina.com/news/gb/tag/游行" target="_blank">
+   游行
   </span>
-  给党中央：“党中央号召大鸣大放，怎么又收了？共产党不怕国民党八百万大军，不怕美帝国主义，怎么会担心人民推翻党的领导和人民政府？共产党要敢于接受各界人士的批评，批评人士大多是爱国、爱党的，一些民主党派人士为新中国的解放，作出了家庭、个人名利的牺牲，一些二、三十岁的青年知识分 子怎么可能一天就变成反党反社会主义分子？我很不理解这个运动，我想了两个多月，还是想不通，有这么多党内党外纯粹的人会站在共产党和人民政府的对立面？要推翻共产党？”
+  的诉求包括：强烈要求执法者公正执法，保护生命财产不被侵害，合理解决访民问题，而不是解决提出问题的人民，打倒腐败贪官。呼唤有关执法者公正执法，严惩腐败！呼唤公检法有关人员回归正途！
  </p>
  <p>
-  从1958年起，宋曾推病拒绝参加人大常委会。党中央委派刘少奇、周恩来、董必武去做工作，宋只得继续参加。1959年4月，宋在人大被推举为国家副主席。宋先后两次推辞：“我是落伍了，思想跟不上，才挂个名，作个样子，对国家不利。”提议由李富春或乌兰夫担任。
+  在申请的最后还特别提醒审批机关，集会游行示威法的第九条第一款，明确了审批机关如不作答复，就视为许可的规定。
  </p>
  <p>
-  宋任国家副主席，是刘少奇、董必武、林伯渠、李富春提议的，政治局讨论时，21人中18人赞成，3人反对，反对者是：毛、林彪、康生。当时毛发言：“宋是我们民主革命时期的同路人，在社会主义革命时期，她和我们就走不到一起了。从不赞成我们的方针路线到反对我们的方针路线。我们同她是不同的阶级。”
+  <strong>
+   中共当局开始维稳
+  </strong>
  </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
  <p>
-  文革期间，宋先后给毛和党中央写了七封信，表达了她对“文革”的不理解、反感，并对共产党极度失望。1967年8月、1969年11月、1976年6月，宋曾三次产生厌世思想，在信中以及对来探望她的领导人的谈话中流露出对自己所选择的道路感到怅惘和说不出的苦闷。
+  申请还未获官方回复，申请人赵春红就已遭到威胁。据大纪元报导指，
+  <span href="https://wqw2010.blogspot.com/2020/11/blog-post_29.html" target="_blank">
+   赵春红
+  </span>
+  于11月24日作为代表提出上述申请后，于当天半夜，其户籍地政府人员就赶到她在北京的住处。次日上午，大兴分局警察给她打了电话；下午，西城分局的警察也打来电话，警告她在没准游行示威前不要做“违法”的事。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -98,7 +98,7 @@
   </div>
  </center>
  <p>
-  七封信中说：“我不懂文化，说小说都是政治，而且都是毒草，我糊涂了，一夜天下来，一些和我一起工作的同事都变成了走资派、反党集团、野心家、牛鬼蛇神。中央要我学习批判揭发刘少奇，我不会作的，刘少奇主席在党中央工作了三、四十年，今天会是叛徒、内奸！我不相信，一个叛徒内奸当了七年的国家主席，现在宪法还有效吗？怎么可以乱抓人、乱斗人、逼死人？党中央要出来讲话。这种无法无天的情况，自己伤害自己的同志、人民，是罪行。我们的优秀干部从与国民党的战斗中走过来，却死在自己的队伍中，这是什么原因？”
+  11月30日，维权网获悉：30日下午17点，姜家文回到北京房山阎村的住处后，就被蹲守的警察带去阎村派出所，说是因为之前联署申请“法制日”和“人权日”游行的事进行问话。而到派出所后，工作人员则说要等北京市治安总队的人来。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -113,7 +113,7 @@
   </div>
  </center>
  <p>
-  1970年3月，毛对周恩来说：“她不愿意看到今天的变化，可以到海峡对岸，可以去香港、去外国，我不挽留。”并指示周恩来、李先念把他的话传达给宋。传达时他们说：“主席很关心你，知道你的心情不怎么好，建议你到外面散散心，休息休息。”宋说：“是否嫌我还在？我的一生还是要在这块土地上，走完最后几步。”于是宋推病拒绝出席一些节日活动和招待会，说：“我参加会伤感，还是不参加，参加一次，回来就要进医院。另外，我也不想做政治上的点缀。”
+  另外，北京市公安局还给马波等在集会游行示威申请上联署的人打电话约谈，都是警告不要参与这一次的集会游行示威活动。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -128,7 +128,26 @@
   </div>
  </center>
  <p>
-  1980年11月，宋给党中央写了她一生中最后的一封信：“一、国家要振兴，恢复元气，这是一次大好时机。二、要总结建国以来政治运动对国家对人民造成的创伤。三、请不要把我和国父放在一起，我不够格的。”
+  目前还在湖北潜江的伍立娟也收到了国保的招呼，就是“法制日”和“
+  <span href="https://www.secretchina.com/news/gb/tag/世界人权日" target="_blank">
+   世界人权日
+  </span>
+  ”不要去北京，更不能参与集会游行示威。伍丽娟说，“这次的活动只限报名的访民，不让其他人参与。且这次申请活动也是因为维权访民中有很多问题无法解决”。她表示，随着社会的发展，社会问题更加突出，出现更多的矛盾和不公，没有正义，老百姓看不到阳光。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  伍丽娟最后还说：“示威游行是代表宪法赋予我们的权利，没有任何政治目的，也没有其它的诉求，主是要解决访民的问题。希望北京警察能来维护秩序，不要假充访民在中间来扰乱社会秩序。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -192,13 +211,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/904686.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/904686.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/904686.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/26/904686.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/954321.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/954321.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/954321.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/01/954321.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p6/904686.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p1/954321.md' width='0px' height='0px'/>
