--- a/pages/p1/954312.md
+++ b/pages/p1/954312.md
@@ -1,4 +1,4 @@
-### 藏族网红“拉姆被烧” 东莞大剧院宣传新剧消费死者(组图)
+### 又一热气球事故 云南腾冲一男子坠落身亡(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,10 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align: center;">
-  <img alt="网红 东莞" src="https://img3.secretchina.com/pic/2020/10-7/p2790931a688768891-ss.jpg" style="height:344px; width:600px"/>
+ <p style="text-align:center">
+  <img alt="11月30日，云南腾冲火山地质公园发生热气球意外，一名工作人员于高空中的热气球坠落当场身亡（图片来源：微博)" src="https://img3.secretchina.com/pic/2020/12-1/p2829721a286144160-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   藏族网红拉姆虽出身贫户，其外型亮丽成为网红后扛起全家家计。（图片来源：微博截图）
+   11月30日，云南腾冲火山地质公园发生热气球意外，一名工作人员于高空中的热气球坠落当场身亡（图片来源：微博)
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,58 +21,66 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年10月7日讯】（看中国记者黎小葵综合报导）出身贫户的
+  【看中国2020年12月1日讯】（看中国记者文俪综合报导）11月30日，
   <strong>
-   藏族网红
-  </strong>
-  “
-  <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/卓玛拉姆" target="_blank">
-    卓玛拉姆
+   <span href="https://www.secretchina.com/news/gb/tag/云南" target="_blank">
+    云南
    </span>
+   腾冲
   </strong>
-  ”9月中旬在家做网络直播时，惨遭前夫泼汽油烧身，导致重度烧伤，在与病魔斗争16天后，于中秋节前一天不幸离世。然而，东莞玉兰大剧院竟以此悲剧
+  火山地质公园发生
   <strong>
-   宣传
+   热气球
   </strong>
-  新剧，惹怒中国民间。
+  意外，一名工作人员于高空中的热气球
+  <strong>
+   坠落
+  </strong>
+  当场身亡。有现场游客看到工作人员坠落吓得“啊啊”大叫。据悉，这已经是今年第2起热气球事故。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  10月6日，东莞玉兰大剧院为
-  <span href="https://www.secretchina.com/news/gb/tag/宣传" target="_blank">
-   宣传
+  综合陆媒报导，11月30日中午11点30分左右，云南
+  <span href="https://www.secretchina.com/news/gb/tag/腾冲" target="_blank">
+   腾冲
   </span>
-  新剧目在公众号推出一篇题为&lt;拉姆为前夫所烧而我只为你燃烧&gt;的文章，消费死者的夸张行径招致广大网友抨击，院方随后紧急删除文章，并发文道歉，表示因“审核流程不把关，出现严重的表述不当，沉痛而诚挚地向各方表示最深重的歉意”。
- </p>
- <p style="text-align: center;">
-  <img alt="网红 东莞" src="https://img3.secretchina.com/pic/2020/10-7/p2790911a393515628-ss.jpg" style="height:326px; width:600px"/>
-  <br>
-   拉姆去世没多久，东莞玉兰大剧院就推出一篇名为&lt;拉姆为前夫所烧，而我只为你燃烧&gt;的文章宣传新剧目。（图片来源：微博截图）
-  </br>
+  火山地质公园热气球俱乐部工作人员在结束工作后，准备收起热气球时，因为起风的原因，热气球重新又被风吹起来了。一名地勤工作人员没有来得及放开绳索就被带到了空中，接着就发生坠落。
  </p>
  <p>
-  不过网友不领情，仍愤怒表示，“拉姆被前夫烧伤去世是悲剧事件，剧院为蹭热点如此调侃太过分！”“这得有多下作才想得出这样的文案！”“审核不当，那是谁写的呢？谁来审核的？这时候了就别玩主语消失了...”“是非不分，只为流量，吃相太难看，令人作呕。”“可怕的不是他们不知道会被骂，而是明知道后果还是伺机而动，有些人恶劣起来是没有底线的”，还有人叹息，“科技发展太快，素质没有跟上”。
+  从网友发布的视频可见，一名工作人员在不断升空的
+  <span href="https://www.secretchina.com/news/gb/tag/热气球" target="_blank">
+   热气球
+  </span>
+  下方的绳索上快速滑落，工作人员曾试图抓住绳子，但最终都无法抓住，并快速从高空中坠落。现场游客看到这一幕，吓得大声惊叫：“啊...掉下来了...啊...”
  </p>
- <p style="text-align: center;">
-  <img alt="网红 东莞" src="https://img3.secretchina.com/pic/2020/10-7/p2790941a237126423-ss.jpg" style="height:691px; width:600px"/>
-  <br>
-   网友纷纷在微博留言表达心里不满。（图片来源：微博截图）
-  </br>
+ <blockquote class="twitter-tweet">
+  <p dir="ltr" lang="zh">
+   今天（30日），云南腾冲火山地质公园热气球发生故障，一名工作人员从高空当场掉落身亡，具体事故原因正在调查中。
+   <span href="https://t.co/xJ1hv5wpS2">
+    pic.twitter.com/xJ1hv5wpS2
+   </span>
+  </p>
+  — 今日中国 (@Today__China)
+  <span href="https://twitter.com/Today__China/status/1333334453087657984?ref_src=twsrc%5Etfw">
+   November 30, 2020
+  </span>
+ </blockquote>
+ <p>
+  事故发生后，当地官方通报称，事件调查及善后处理工作正在进行，该景区将进行停业整顿。
  </p>
  <p>
-  根据先前报导，拉姆虽出身贫户，但非常孝顺，外型亮丽的她成为网红后扛起全家家计，不吝与网友分享山里的生活，颇受欢迎。不料9月14日晚上她在家中网络直播时，突遭前夫唐某泼汽油焚烧，导致全身多处重度烧伤，事后被送往阿坝州医院，3天后再转送至四川省医院，期间拉姆一直处于昏迷状态。
+  有网友表示：“没有专业指导的项目就盲目的搞起来，工作人员没拖上天，说明没有培训过。一个人的力量能拽住热气球吗？”、“没错，他还想试图把它拽下来，风刚刮起来就该赶紧撒手，说白了还是怕被罚被扣钱。唉，普通劳动工作者真的心酸”、“这是出了人命，停业整顿，如果人还在，热气球飞走了，他的领导不知道该怎么罚他”、“这得多绝望啊，从天空掉下来的那一瞬间”、“所以大家不要去玩儿这种项目，如果是嫌自己活得太久，可以去玩儿一下”、“热气球近来事故频出，要出台管理办法了。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -87,7 +95,9 @@
   </div>
  </center>
  <p>
-  拉姆的姐姐卓玛9月25日表示，拉姆妹昏迷两周后，在9月24日眼睛动了一下，有过一点意识。但由于拉姆伤势严重，最终在中秋节前一天（9月30日）不幸去世。
+  <strong>
+   热气球事故频发
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -102,7 +112,11 @@
   </div>
  </center>
  <p>
-  拉姆的表姐罗罗曾透露，事发前拉姆曾长期受到前夫骚扰、威胁，也报警多次，却仍发生憾事。
+  早在今年10月2日，湖南株洲一
+  <span href="https://www.secretchina.com/news/gb/search?nohard=0&amp;q=%E7%83%AD%E6%B0%94%E7%90%83" target="_blank">
+   热气球
+  </span>
+  飞行营地，一男子从约二十米高空中的热气球上坠落到地面，当场死亡。据悉，坠落者是一名大三学生，为兼职人员，一天薪水120元人民币。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -117,7 +131,11 @@
   </div>
  </center>
  <p>
-  公开资料显示，拉姆出生于1990年，藏族，全名卓玛拉姆，她主要的收入来源靠种地和上山采药，从2018年起在抖音短视频平台成为小有名气的网络红人，账号名黑姑娘“拉姆”。截止2020年9月，她共发布了205个作品，收获24.2万名粉丝。
+  2019年10月1日，山东烟台市马家沟景区发生观光氢气球意外，一对母子乘坐景区游乐场的大型氢气球时，连接氢气球与地面的绳索突然断裂，氢气球飞向高空，破裂后
+  <span href="https://www.secretchina.com/news/gb/tag/坠落" target="_blank">
+   坠落
+  </span>
+  ，母子俩直接从半空中坠地，当场惨死。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -149,7 +167,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -181,13 +199,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/948468.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/948468.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/948468.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/07/948468.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/954312.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/954312.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/954312.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/01/954312.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p1/948468.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p1/954312.md' width='0px' height='0px'/>
