--- a/pages/p8/954346.md
+++ b/pages/p8/954346.md
@@ -1,4 +1,4 @@
-### 全球智慧城市排名前三城市 欧洲占两位(图)
+### 摆脱受害者思维 拿回人生掌握权(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align: center;">
-  <img alt="芬兰赫尔辛基" src="https://img3.secretchina.com/pic/2020/7-1/p2722672a37047722-ss.jpg" style="height:337px; width:600px"/>
+  <img alt="史蒂芬．柯维 习惯 成功 天下文化" src="https://img3.secretchina.com/pic/2020/12-1/p2829882a804220776-ss.jpg"/>
   <br>
-   芬兰赫尔辛基（图片来源：Adobe Stock）
+   摆脱受害者思维，拿回人生掌握权。（图片来源：Adobestock）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,57 +21,40 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年9月18日讯】瑞士洛桑国际管理学院（IMD）今天公布
   <strong>
-   全球
-   <span href="https://www.secretchina.com/news/gb/tag/智慧城市" target="_blank">
-    智慧城市
-   </span>
+   不满意现在的生活模式？尝试摆脱受害者思维，拿回人生掌握权
   </strong>
-  指数，新加坡、芬兰首都赫尔辛基和瑞士大城苏黎世名列前3。台北
-  <strong>
-   排名
-  </strong>
-  第8，比去年下滑一名。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  这是洛桑管理学院第2次公布全球
-  <span href="http://智慧城市" target="_blank">
-   智慧城市
+  要形成
+  <span href="https://www.secretchina.com/news/gb/tag/习惯" target="_blank">
+   习惯
   </span>
-  指数（Smart City Index），共对全球109个城市的1万3000余民众作了调查，聚焦他们所感受科技对卫生与安全、机动性、活动、机会与治理等5个领域的影响。
+  来回应内心想要表现的欲望，要表现自己的与众不同，要显示自己的重要性，要去影响我们最看重的人或事业，所有这些都始于我们最初的选择──发挥影响力的内在声音。
  </p>
  <p>
-  第4名是纽西兰大城奥克兰，第5名是挪威首都奥斯陆，第6名是丹麦首都哥本哈根，第7名是瑞士大城日内瓦，第9名是阿姆斯特丹，第10名是纽约。倒数前3名则是奈及利亚大城拉哥斯（Lagos）、肯亚首都奈洛比和（Nairobi）奈及利亚首都阿布加（Abuja）。
+  当我在实际教学中讲授本书所提到的原则，总有人提出这个问题：“柯维先生，你所说的这些原则都很好。我相信它们在理论上是成立的，也真心希望自己能做到，可是你完全想像不到我在公司的处境。如果你也有一个那样的老板，就会理解我为什么永远也做不到你说的那些了。我到底该怎么办？”
  </p>
  <p>
-  由智慧监测路况摄影机和汽车共享app，以至污染监控装置和免费wifi，世界各地城市竞相拥抱科技，但研究人员表示，真正的考验在于民众是否觉得受益。
+  当我讲授如何将这些原则应用到婚姻和家庭的时候，总是会有女性听众向我抱怨丈夫，也总是会有男性听众向我抱怨妻子。他们说的话大致一样：“你要是知道我丈夫是什么样子，就会知道我的意思了，这些根本就行不通！”
  </p>
  <p>
-  洛桑管理学院
-  <span href="https://www.secretchina.com/news/gb/tag/全球" target="_blank">
-   全球
-  </span>
-  竞争力中心主任布里斯（ArturoBris）表示：“世界上的‘智慧城市’不只是采用新科技，而且确保它们确实会改善民众的生活。”
+  这些人很烦恼，也很悲惨，但是他们看不到还有别的路可走。我的回答通常会让他们感到震惊，有些人甚至觉得受到冒犯。我是这样回答的：“不论什么时候，如果你认为问题出在别人身上，那么这个想法本身就有问题。”
  </p>
  <p>
-  这项指数显示，许多国家都在首都以外发展智慧2级城市。例如西班牙城市毕尔包（Bilbao）
-  <span href="https://www.secretchina.com/news/gb/tag/排名" target="_blank">
-   排名
-  </span>
-  还高于首都马德里，英国第2大城伯明罕在排行榜上升的速度也快过首都伦敦。
+  有些人会反问我：“你的意思是，这全是我自己的问题？”其实，我想说的是：“不管什么时候，一旦你将自己的情感生活建立在另外一个人的弱点上，你就是将情感上的自由完全交到他手中，也就是说，你授权对方继续把你的生活弄得一团糟。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -86,7 +69,7 @@
   </div>
  </center>
  <p>
-  专家表示，2019冠状病毒疾病（COVID-19）疫情加速了更环保和更有智慧城市的发展。布里斯则预测较小型城市将日成趋势，因为这将更为安全。
+  我和听众最后都会达成一种共识，让他们意识到自己并不是受害者，对于别人的行为，他们永远有自由去选择应对的方式。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -101,7 +84,9 @@
   </div>
  </center>
  <p>
-  布里斯说，这次调查凸显大城市常难以成为智慧城市。他指出：“较小的城市占有优势。以新加坡、赫尔辛基和苏黎世为例，它们的规模让它们得以大举投资在能普及所有市民的科技。”
+  这个社会总是过于强调受害者心理和谴责他人的思维，实际上，每个人天生就有能力做自己生活的主宰，选择一种提升影响力的生活方式。我们可以成为老板的领导者。
+  <br>
+  </br>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -116,25 +101,13 @@
   </div>
  </center>
  <p>
-  <span href="https://www.secretchina.com" target="_blank">
-   中国
-  </span>
-  虽然发展了数百个配备有感应器、监视器和其他装置的智慧城市，这些装置能蒐罗由污染至公共卫生的各种资讯，但这些城市排名都相当低。布里斯说，这除了因为这些城市的规模，也因为对资讯隐私和侦监的关切。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  原标题：全球智慧城市排名 新加坡居首台北第
+  <strong>
+   本文整理、节录自史蒂芬．柯维（Stephen R. Covey）《
+   <span href="https://www.books.com.tw/products/0010829010">
+    第8个习惯－从成功到卓越
+   </span>
+   》一书，文章仅代表作者个人立场和观点。由天下文化授权转载，欲阅读完整作品，欢迎参考原书。
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -166,7 +139,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -198,13 +171,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p9/946492.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p9/946492.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p9/946492.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/09/18/946492.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/954346.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/954346.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/954346.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/01/954346.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p9/946492.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p8/954346.md' width='0px' height='0px'/>
