--- a/pages/p5/954351.md
+++ b/pages/p5/954351.md
@@ -1,4 +1,4 @@
-### 在华台企：下半年中国投资环境不容乐观
+### 美众院本周就涉美上市中概股法案进行表决
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,17 +7,18 @@
 
 <div class="article_right" style="fone-color:#000">
  <p>
-  【看中国2020年10月7日讯】
+  【看中国2020年12月1日讯】美国
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/武汉肺炎" target="_blank">
-    武汉肺炎
+   <span href="https://www.secretchina.com/news/gb/tag/国会" target="_blank">
+    国会
    </span>
+   众议院
   </strong>
-  病毒大流行给在中国大陆经营的
+  这个星期将就一项跨党派的立法进行投票，这项已在参议院通过的法案将迫使在美国交易所
   <strong>
-   台湾企业
+   上
   </strong>
-  造成了很大的困难，大部分台企都没有能够跟上北京所宣称的经济全面复苏的步伐。
+  市的中国公司要么进行经过美国监管机构审查的年度审计，包括提供不受外国政府控制的证明，要么停止在美国的交易所进行股票交易。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
@@ -28,57 +29,46 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  总部位于台北的全国工业总会（工总）最近对在中国大陆的
-  <span href="https://www.secretchina.com/news/gb/tag/台湾" target="_blank">
-   台湾
+  根据
+  <span href="https://www.secretchina.com/news/gb/tag/众议院" target="_blank">
+   众议院
   </span>
-  企业进行调查发现一个现象。调查发现，80%以上的台企老板表示，今年他们的企业收入出现了大幅度下滑。
+  的网站，本周可能审议的法案包括《外国公司问责法案》（Holding Foreign Companies Accountable Act）。彭博社和《华尔街日报》报道说，美国国会议员周三将根据一个简化的程序对《外国公司问责法案》进行审议。该程序限制众议院的辩论，不允许修改，并要求在场议员中有三分之二的人投票通过。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  这次调查是在7月7日至8月25日之间进行的。接受调查
-  <span href="https://www.secretchina.com/news/gb/tag/企业" target="_blank">
-   企业
+  如果该法案成为法律，
+  <span href="https://www.secretchina.com" target="_blank">
+   中国
   </span>
-  有157家，其中大部分是中小企业。它们普遍反映，武汉肺炎疫情造成的海外订单流失和人员流动与物流受到的阻滞是大流行给它们带来的最大障碍。
+  企业及其审计机构在被踢出纽约证交所(New York Stock Exchange)或纳斯达克(Nasdaq)之前将有三年时间遵守有关的规定。
  </p>
  <p>
-  近一半的受访企业说，它们的制造产能利用率依然停留在70%的水平，还有7%的企业说，它们的运营从武汉肺炎疫情爆发到现在都还没有恢复。
+  这项法案的发起人说，它的目的是确保在美国
+  <span href="https://www.secretchina.com/news/gb/tag/上市" target="_blank">
+   上市
+  </span>
+  的外国公司受到适用于美国公司的独立审计要求的制约。
  </p>
  <p>
-  这项调查发现的情况跟北京近一段时期公布的许多经济强力反弹的消息有很大的差别。
+  与马里兰州的民主党国会参议员范霍伦(Chris Van Hollen)一起提出了该法案的路易斯安那州共和党国会参议员肯尼迪(John Kennedy)周六在给彭博社的一份声明中说：“允许中国企业无视美国企业遵守的规则的现行政策是有害的。”
  </p>
  <p>
-  工总表示，传统工业受到病毒大流行的影响更为严重。它们中90%都缩小了业务规模，电信和电子行业的企业中有70%出现了萎缩。
+  这项法案得到两党支持。今年5月，该法案在参议院获得无异议通过。这个法案比美国证券交易委员会正在考虑的一项提案更具惩罚性，那项提案把接受审计检查作为继续在证券交易所上市的条件，但将允许不合规的公司进行场外交易
  </p>
  <p>
-  根据这项调查，将近60%的台企在疫情爆发后采取的对策就是“收缩生产线，推迟投资计划”。还有部分公司则采取“在家工作”和“不带薪休假”“减少工资”等应对措施。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  大多数受访者认为，这场病毒大流行的影响将会再持续半年左右。66%的企业认为今年下半年大陆的投资环境“不容乐观”或者“极度悲观”。将近80%的受访企业表示，他们再今后两年不会增加在大陆的投资。
+  中国一直拒绝让美国上市公司会计监察委员会(Public Company Accounting Oversight Board)的检查员审查在美国交易所进行交易的中国公司的审计报告。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -93,7 +83,7 @@
   </div>
  </center>
  <p>
-  工总表示，“显然台湾企业在大陆的投资有可能会回流至台湾。”
+  中美两国在从军事到人权等多个领域的紧张关系不断升级，以及瑞幸咖啡公司(Luckin Coffee Inc.)今年爆出的备受瞩目的会计丑闻，使得这个问题变得更加紧迫。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -108,7 +98,7 @@
   </div>
  </center>
  <p>
-  全总还敦促台湾政府尽快启动纾困3.0计划，帮助制造业中受到疫情影响的企业。台湾政府先后在今年3月和5月推出两项纾困计划，减小疫情给企业和工人带来的财务影响。这两项计划总金额为2100亿新台币预算。
+  中国官员批评该法案，说有更好的办法解决华盛顿和北京在审计检查方面的分歧，而且中国公司退市将损害美国资本市场。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -123,7 +113,55 @@
   </div>
  </center>
  <p>
-  纾困3.0计划还要等待台湾立法院的审批。
+  据《华尔街日报》报道，一些公司已经表示，如果法案获得通过，它们将转向美国以外的交易所。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  美中两国官员一直未能在审计的问题上达成妥协方案。与此同时，彭博社的报道提到，中国公司继续在美国证券交易所上市。它们今年已经通过首次公开上市筹集了约120亿美元。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  <span href="https://www.secretchina.com/news/gb/tag/川普" target="_blank">
+   川普
+  </span>
+  (特朗普)总统11月12日发布了一项将于明年1月11日生效的行政命令，禁止美国人向支持中国军方的中国公司投资。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  路透社报道说，川普政府准备将中国最大的芯片制造企业中芯国际（SMIC）和大型国有石油公司中海油（CNOOC）认定为中共军工企业。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -155,7 +193,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -187,13 +225,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/948473.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/948473.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/948473.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/07/948473.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/954351.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/954351.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/954351.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/01/954351.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p5/948473.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p5/954351.md' width='0px' height='0px'/>
